<resources>
    <string name="app_name">Modern Math</string>
    <string name="modern_math">Modern Math</string>
    <string name="modern_math_logo">Modern Math Logo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_existing_user">Add Existing User</string>
    <string name="add_new_user">Add New User</string>
    <string name="create_profile">Create Profile</string>
    <string name="age">Age</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="email">Email?</string>
    <string name="instructor">Instructor Account</string>
    <string name="leadership_board">LEADERSHIP BOARD</string>
    <string name="subtraction">Subtraction</string>
    <string name="addition">Addition</string>
    <string name="multiplication">Multiplication</string>
    <string name="division">Division</string>
    <string name="assignment_name">Assignment name</string>
    <string name="number_of_questions">Number of questions</string>
    <string name="create_assignment">Create assignment</string>
    <string name="timer">Timer</string>
    <string name="difficulty">Difficulty</string>

    <string-array name="mode_array">
        <item>Add</item>
        <item>Subtract</item>
        <item>Multiple</item>
        <item>Divide</item>
    </string-array>

    <string-array name="level_array">
        <item>Select Level</item>
        <item>Easy</item>
        <item>Medium</item>
        <item>Hard</item>
        <item>Custom</item>
    </string-array>

    <string-array name="time_array">
        <item>Timer off</item>
        <item>5</item>
        <item>10</item>
        <item>15</item>
        <item>20</item>
        <item>25</item>
        <item>30</item>
        <item>35</item>
        <item>40</item>
        <item>45</item>
        <item>50</item>
        <item>55</item>
        <item>60</item>
    </string-array>

    <string-array name="num_q_array">
        <item>No target</item>
        <item>5</item>
        <item>10</item>
        <item>15</item>
        <item>20</item>
        <item>25</item>
        <item>30</item>
        <item>35</item>
        <item>40</item>
        <item>45</item>
        <item>50</item>
        <item>55</item>
        <item>60</item>
        <item>65</item>
        <item>70</item>
        <item>75</item>
        <item>80</item>
        <item>85</item>
        <item>90</item>
        <item>65</item>
        <item>100</item>
    </string-array>

    <string name="number_0">0</string>
    <string name="number_1">1</string>
    <string name="number_2">2</string>
    <string name="number_3">3</string>
    <string name="number_4">4</string>
    <string name="number_5">5</string>
    <string name="number_6">6</string>
    <string name="number_7">7</string>
    <string name="number_8">8</string>
    <string name="number_9">9</string>
    <string name="operand_1">10</string>
    <string name="operand_2">20</string>
    <string name="add">+</string>
    <string name="subtract">-</string>
    <string name="multiply">X</string>
    <string name="divide">/</string>
    <string name="equals">=</string>

    <string name="start_challenge">Start Challenge?</string>
    <string name="number_of_Questions">Number of Questions: %1$d</string>
    <string name="time">Time: %1$s seconds</string>
    <string name="start_button">Yes</string>
    <string name="correct_answers">Correct Answers: %1$d</string>
    <string name="incorrect_answers">Incorrect Answers: %1$d</string>
    <string name="home">Home</string>
    <string name="error">Something went wrong. Please try again.</string>
    <string name="time_spent">Time Spent</string>
</resources>