<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context=".problem_screen.NumPadFragment">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:id="@+id/number_1"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_margin="5dp"
        android:text="@string/number_1"
        android:gravity="center"
        android:onClick="numberPressed"
        />

    <TextView
        android:id="@+id/number_2"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_margin="5dp"
        android:layout_toEndOf="@id/number_1"
        android:text="@string/number_2"
        android:gravity="center"
        android:onClick="numberPressed"
        />

    <TextView
        android:id="@+id/number_3"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_margin="5dp"
        android:layout_toEndOf="@id/number_2"
        android:text="@string/number_3"
        android:gravity="center"
        android:onClick="numberPressed"
        />

    <TextView
        android:id="@+id/number_4"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_below="@id/number_1"
        android:layout_margin="5dp"
        android:text="@string/number_4"
        android:gravity="center"
        android:onClick="numberPressed"
        />

    <TextView
        android:id="@+id/number_5"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_below="@id/number_2"
        android:layout_margin="5dp"
        android:layout_toEndOf="@id/number_4"
        android:text="@string/number_5"
        android:gravity="center"
        android:onClick="numberPressed"
        />

    <TextView
        android:id="@+id/number_6"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_below="@id/number_3"
        android:layout_margin="5dp"
        android:layout_toEndOf="@id/number_5"
        android:text="@string/number_6"
        android:gravity="center"
        android:onClick="numberPressed"
        />

    <TextView
        android:id="@+id/number_7"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_below="@id/number_4"
        android:layout_margin="5dp"
        android:text="@string/number_7"
        android:gravity="center"
        android:onClick="numberPressed"
        />

    <TextView
        android:id="@+id/number_8"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_below="@id/number_5"
        android:layout_margin="5dp"
        android:layout_toEndOf="@id/number_7"
        android:text="@string/number_8"
        android:gravity="center"
        android:onClick="numberPressed"
        />

    <TextView
        android:id="@+id/number_9"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_below="@id/number_6"
        android:layout_margin="5dp"
        android:layout_toEndOf="@id/number_8"
        android:text="@string/number_9"
        android:gravity="center"
        android:onClick="numberPressed"
        />

    <TextView
        android:id="@+id/backspace"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_below="@id/number_7"
        android:layout_margin="5dp"
        android:onClick="clear"
        />

    <TextView
        android:id="@+id/number_0"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_below="@id/number_8"
        android:layout_margin="5dp"
        android:layout_toEndOf="@id/number_7"
        android:text="@string/number_0"
        android:onClick="numberPressed"
        android:gravity="center"
        />

    <TextView
        android:id="@+id/submit"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_below="@id/number_9"
        android:layout_margin="5dp"
        android:layout_toEndOf="@id/number_0"
        android:onClick="submit"
        />
</RelativeLayout>