<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".assignments.Create_Assignment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/main_toolbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/ic_launcher_mm_background"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <EditText
        android:id="@+id/assignment_name_edittext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:hint="@string/assignment_name"
        android:importantForAutofill="no"
        android:inputType="text"
        android:minWidth="200dp"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_toolbar" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/addition_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addition"
        app:layout_constraintBottom_toTopOf="@id/subtraction_switch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/assignment_name_edittext"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintVertical_bias=".1"
        />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/subtraction_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/subtraction"
        app:layout_constraintBottom_toTopOf="@+id/multiplication_switch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addition_switch" />


    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/multiplication_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/multiplication"
        app:layout_constraintBottom_toTopOf="@+id/division_switch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subtraction_switch" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/division_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/division"
        app:layout_constraintBottom_toTopOf="@+id/difficulty_spinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/multiplication_switch" />

    <TextView
        android:id="@+id/difficulty_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/difficulty"
        app:layout_constraintBottom_toTopOf="@+id/difficulty_spinner"
        app:layout_constraintStart_toStartOf="@+id/difficulty_spinner"
        app:layout_constraintEnd_toEndOf="@+id/difficulty_spinner"
        android:layout_marginBottom="5dp" />

    <Spinner
        android:id="@+id/difficulty_spinner"
        android:layout_width="262dp"
        android:layout_height="48dp"
        android:layout_marginTop="35dp"
        android:background="@android:drawable/editbox_dropdown_light_frame"
        android:spinnerMode="dropdown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/division_switch" />

    <TextView
        android:id="@+id/timer_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/timer"
        app:layout_constraintBottom_toTopOf="@+id/time_picker"
        app:layout_constraintStart_toStartOf="@+id/time_picker"
        app:layout_constraintEnd_toEndOf="@+id/time_picker"
        app:layout_constraintTop_toBottomOf="@+id/difficulty_spinner"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="5dp" />

    <NumberPicker
        android:id="@+id/time_picker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/timer_text"
        app:layout_constraintBottom_toTopOf="@+id/create_assignment_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/num_questions_picker" />

    <TextView
        android:id="@+id/num_questions_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number_of_questions"
        app:layout_constraintBottom_toTopOf="@+id/num_questions_picker"
        app:layout_constraintStart_toStartOf="@+id/num_questions_picker"
        app:layout_constraintEnd_toEndOf="@+id/num_questions_picker"
        app:layout_constraintTop_toBottomOf="@+id/difficulty_spinner"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="5dp" />

    <NumberPicker
        android:id="@+id/num_questions_picker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/num_questions_text"
        app:layout_constraintBottom_toTopOf="@+id/create_assignment_button"
        app:layout_constraintStart_toEndOf="@+id/time_picker"
        app:layout_constraintEnd_toEndOf="parent" />



    <Button
        android:id="@+id/create_assignment_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_assignment"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="10dp" />


</androidx.constraintlayout.widget.ConstraintLayout>