<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.AddNewUserActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/main_toolbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/ic_launcher_mm_background"
        app:layout_constraintTop_toTopOf="parent"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <EditText
        android:id="@+id/username_edittext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:importantForAutofill="no"
        android:inputType="textNoSuggestions"
        android:minWidth="200dp"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/first_name_edittext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_toolbar" />


    <EditText
        android:id="@+id/first_name_edittext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/first_name"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:minWidth="200dp"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/last_name_edittext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username_edittext" />

    <EditText
        android:id="@+id/last_name_edittext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/last_name"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:minWidth="200dp"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/age_edittext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/first_name_edittext" />

    <EditText
        android:id="@+id/age_edittext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/instructor_checkbox"
        app:layout_constraintTop_toBottomOf="@+id/last_name_edittext"
        android:minHeight="48dp"
        android:minWidth="200dp"
        android:inputType="number"
        android:hint="@string/age"
        android:importantForAutofill="no" />

    <CheckBox
        android:id="@+id/instructor_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/instructor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/create_profile_button"
        app:layout_constraintTop_toBottomOf="@+id/age_edittext" />

    <Button
        android:id="@+id/create_profile_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/instructor_checkbox"
        android:onClick="onProfileSubmit"
        />


</androidx.constraintlayout.widget.ConstraintLayout>